--- a/games.html
+++ b/games.html
@@ -188,7 +188,7 @@
                 </div>
                 <iframe 
                     id="game-iframe"
-                    src="https://html5.gamedistribution.com/rvvASMi/9c14b8b8b3f64a6e812a0a262e2e6e7b/?gd_sdk_referrer_url=https://www.crazygames.com/game/subway-surfers"
+                    src="https://html5.gamedistribution.com/82f6fa2fa66c47b3a0f2b0543cbdfc43/"
                     style="display: none;"
                     allow="autoplay; fullscreen"
                     scrolling="no"
