--- a/games.html
+++ b/games.html
@@ -66,7 +66,7 @@
     <div class="game-container">
         <!-- استبدل هذا الرابط برابط اللعبة الحقيقي -->
         <iframe 
-            src="https://app-362399.games.s3.yandex.net/362399/6ewbnp2pcltorfuqt4inq1c8u7nh1qzc_brotli/index.html" 
+            src="https://app-362399.games.s3.yandex.net/362399/6ewbnp2pcltorfuqt4inq1c8u7nh1qzc_brotli/index.html?sdk=%2Fsdk%2F_%2Fv2.dfed038c116f559b5fee.js#origin=https%3A%2F%2Fplayhop.com&app-id=362399&device-type=desktop" 
             class="game-frame"
             allow="autoplay; fullscreen"
         ></iframe>
