--- a/games.html
+++ b/games.html
@@ -187,12 +187,12 @@
                     <div>Loading Subway Surfers...</div>
                 </div>
                 <iframe 
-                    id="game-iframe"
-                    src="https://html5.gamedistribution.com/rvvASMi/9c14b8b8b3f64a6e812a0a262e2e6e7b/?gd_sdk_referrer_url=https://www.crazygames.com/game/subway-surfers"
-                    style="display: none;"
-                    allow="autoplay; fullscreen"
-                    scrolling="no"
-                ></iframe>
+  src="https://html5.gamemonetize.co/qsd2h427rg6z6gza2xekqsdwgk1dwksa/" 
+  width="800" height="600" 
+  scrolling="none" 
+  frameborder="0">
+</iframe>
+
             </div>
 
             <div class="game-info">
