--- a/games.html
+++ b/games.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Subway Surfers - UG17 Games</title>
-  <meta name="description" content="Play Subway Surfers unblocked on UG17 Games. Run, jump and dash through the subway in this exciting endless runner game.">
+  <title>UG17 Games</title>
+  <meta name="description" content="Play the best HTML5 games on UG17 Games. Run, jump and have fun online!">
   <style>
     * {margin:0;padding:0;box-sizing:border-box;}
     body {
@@ -46,15 +46,16 @@
   <main class="container">
     <div class="game-container">
       <div class="game-frame">
+        <!-- شاشة التحميل -->
         <div class="loading" id="loading">
           <div class="loading-spinner"></div>
           <div>Loading Game...</div>
         </div>
 
-        <!-- 👇 غيّر فقط هذا الرابط لأي لعبة من GameMonetize -->
+        <!-- اللعبة -->
         <iframe 
           id="game-iframe"
-          src="https://html5.gamemonetize.co/qsd2h427rg6z6gza2xekqsdwgk1dwksa/"
+          src="https://html5.gamemonetize.co/qsd2h427rg6z6gza2xekqsdwgk1dwksa/" 
           allow="autoplay; fullscreen"
           scrolling="no">
         </iframe>
@@ -80,56 +81,56 @@
     </div>
   </main>
 
-<script>
-(function() {
-  const iframe = document.getElementById('game-iframe');
-  const loading = document.getElementById('loading');
-  const titleElement = document.querySelector('.game-title');
+  <script>
+  (function() {
+    const iframe = document.getElementById('game-iframe');
+    const loading = document.getElementById('loading');
+    const titleElement = document.querySelector('.game-title');
 
-  // نحاول جلب الاسم من data-title أو من عنوان الصفحة أو من الرابط
-  const gameURL = iframe.getAttribute('src');
-  const dataTitle = iframe.dataset.title?.trim();
-  const pageTitle = document.title.split('-')[0].trim();
+    // رابط اللعبة من iframe
+    const gameURL = iframe.getAttribute('src');
 
-  let nameFromURL = '';
-  try {
-    const urlParts = new URL(gameURL);
-    const segments = urlParts.pathname.split('/').filter(Boolean);
-    nameFromURL = segments[segments.length - 2] || '';
-  } catch {
-    nameFromURL = '';
-  }
-
-  const finalName = dataTitle ||
-    (nameFromURL ? nameFromURL.replace(/[-_]/g, ' ').replace(/\b\w/g, c => c.toUpperCase()) : pageTitle || 'Game');
-
-  // تحديث الواجهة
-  titleElement.textContent = finalName;
-  loading.querySelector('div:last-child').textContent = `Loading ${finalName}...`;
-
-  iframe.onload = function() {
-    loading.style.display = 'none';
-    iframe.style.display = 'block';
-  };
-
-  // في حال تأخر التحميل
-  const fallback = setTimeout(() => {
-    if (loading.style.display !== 'none') {
-      loading.innerHTML = `
-        <div style="text-align:center;color:#fff;padding:18px;">
-          <div class="loading-spinner" style="margin:0 auto 12px;width:40px;height:40px;border:5px solid rgba(255,255,255,0.25);border-top-color:#3CF7DC;border-radius:50%;animation:spin 1s linear infinite;"></div>
-          <div>Game is taking longer than expected.</div>
-          <div style="margin-top:10px;">
-            <a href="${gameURL}" target="_blank" rel="noopener" style="color:#3CF7DC;text-decoration:underline;">Open ${finalName} in a new tab</a>
-          </div>
-        </div>
-      `;
+    // استخراج اسم اللعبة من الرابط تلقائياً
+    let nameFromURL = '';
+    try {
+      const urlParts = new URL(gameURL);
+      const path = urlParts.pathname.split('/').filter(Boolean);
+      nameFromURL = path[path.length - 2] || 'Game';
+    } catch {
+      nameFromURL = 'Game';
     }
-  }, 10000);
 
-  iframe.addEventListener('load', () => clearTimeout(fallback));
-})();
-</script>
+    const formattedName = nameFromURL
+      .replace(/[-_]/g, ' ')
+      .replace(/\b\w/g, c => c.toUpperCase());
 
+    // تحديث اسم اللعبة في الصفحة
+    titleElement.textContent = formattedName;
+    loading.querySelector('div:last-child').textContent = `Loading ${formattedName}...`;
+
+    // عند تحميل اللعبة
+    iframe.onload = function() {
+      loading.style.display = 'none';
+      iframe.style.display = 'block';
+    };
+
+    // في حال تأخر التحميل
+    const fallback = setTimeout(() => {
+      if (loading.style.display !== 'none') {
+        loading.innerHTML = `
+          <div style="text-align:center;color:#fff;padding:18px;">
+            <div class="loading-spinner" style="margin:0 auto 12px;width:40px;height:40px;border:5px solid rgba(255,255,255,0.25);border-top-color:#3CF7DC;border-radius:50%;animation:spin 1s linear infinite;"></div>
+            <div>Game is taking longer than expected.</div>
+            <div style="margin-top:10px;">
+              <a href="${gameURL}" target="_blank" rel="noopener" style="color:#3CF7DC;text-decoration:underline;">Open ${formattedName} in a new tab</a>
+            </div>
+          </div>
+        `;
+      }
+    }, 10000);
+
+    iframe.addEventListener('load', () => clearTimeout(fallback));
+  })();
+  </script>
 </body>
 </html>
