--- a/games.html
+++ b/games.html
@@ -37,8 +37,8 @@
   <header class="game-header">
     <div class="container">
       <div class="header-content">
-        <a href="/" class="logo"><span>🎮</span><span>UG17 Games</span></a>
-        <a href="/" class="back-btn">← Back to Games</a>
+        <a href="https://tikmob.github.io/game" class="logo"><span>🎮</span><span>UG17 Games</span></a>
+        <a href="https://tikmob.github.io/game" class="back-btn">← Back to Site</a>
       </div>
     </div>
   </header>
