--- a/games.html
+++ b/games.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UG17 Games</title>
+  <title>FreePlayHub</title>
   <meta name="description" content="Play the best HTML5 games on UG17 Games. Run, jump and have fun online!">
   <style>
     * {margin:0;padding:0;box-sizing:border-box;}
