--- a/games.html
+++ b/games.html
@@ -9,6 +9,7 @@
   <meta name="keywords" content="free online html5 games, no install browser games, play online arcade games, fun web games for kids, multiplayer browser games, best casual games online, new html5 games 2025, top free browser games, unblocked fun games, play free browser games online, best html5 games 2025, fun browser games to play, play games without download, play games online for free without ads, free unblocked browser games, play free online games on pc, play free mobile browser games, play instant games online">
   
   <!-- Open Graph Meta Tags -->
+  <meta name="robots" content="index, follow">
   <meta property="og:title" content="FreePlayHub - Play Free Online HTML5 Games Instantly">
   <meta property="og:description" content="Enjoy free browser games without downloads or ads. Play instantly on PC, mobile, or tablet!">
   <meta property="og:type" content="website">
