--- a/games.html
+++ b/games.html
@@ -158,6 +158,9 @@
       gap: 10px;
       margin-top: 15px;
     }
+    @media (max-height: 500px) {
+  .game-frame { height: 400px; }
+}
     .category-tag {
       background: rgba(108, 92, 231, 0.7);
       padding: 5px 12px;
