--- a/games.html
+++ b/games.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FreePlayHub - Play Free Online HTML5 Games | No Install Browser Games</title>
   <meta name="description" content="Play the best free online HTML5 games on FreePlayHub. No installation required! Enjoy arcade games, multiplayer browser games, and fun web games for kids. Play instantly on any device without downloads or ads.">
@@ -318,5 +317,6 @@
     iframe.addEventListener('load', () => clearTimeout(fallback));
   })();
   </script>
+  <script>window.scrollTo(0,0);</script>
 </body>
 </html>
