--- a/games.html
+++ b/games.html
@@ -210,6 +210,9 @@
           scrolling="no"
           title="Free HTML5 Game - FreePlayHub">
         </iframe>
+        <!-- زر التكبير داخل إطار اللعبة (ضعه مباشرة بعد iframe) -->
+<button id="zoom-btn" class="zoom-btn" aria-label="Toggle fullscreen">⤢</button>
+
       </div>
 
       <div class="game-info">
