--- a/games.html
+++ b/games.html
@@ -16,6 +16,65 @@
   <meta property="og:url" content="https://tikmob.github.io/game">
   
   <style>
+    /* زر التكبير */
+.zoom-btn {
+  position: absolute;
+  right: 12px;
+  bottom: 12px;
+  z-index: 9999;
+  background: rgba(0,0,0,0.6);
+  color: #fff;
+  border: none;
+  width:44px;
+  height:44px;
+  border-radius:8px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:18px;
+  cursor:pointer;
+  backdrop-filter: blur(4px);
+  transition: transform .15s ease, background .15s ease;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.45);
+}
+.zoom-btn:hover { transform: translateY(-3px); background: rgba(0,0,0,0.8); }
+
+/* الحالة الموسعة (CSS fallback) */
+.game-frame.fullscreen-css {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw !important;
+  height: 100vh !important;
+  max-width: 100% !important;
+  border-radius: 0 !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  z-index: 2147483647; /* أعلى z-index ممكن */
+  background: #000;
+}
+
+/* عندما نضع .fullscreen-css نخفي عناصر الصفحة التي قد تبقى ظاهرة */
+.game-frame.fullscreen-css ~ .game-info,
+.game-frame.fullscreen-css ~ .seo-content,
+.game-frame.fullscreen-css ~ header,
+.game-frame.fullscreen-css ~ footer {
+  display: none !important;
+}
+
+/* أثناء التكبير، ضع الـiframe ظاهراً */
+.game-frame.fullscreen-css #game-iframe {
+  display: block !important;
+  width: 100% !important;
+  height: 100% !important;
+}
+
+/* زر الخروج في الزوايا عند ملء الشاشة الحقيقية (لـbrowser fullscreen) */
+.zoom-btn.exit { background: rgba(255,0,0,0.85); }
+
+/* صغير: تأكد أن .game-frame تكون relative لكي يعمل زر absolute داخلها */
+.game-frame { position: relative; }
+
     * {margin:0;padding:0;box-sizing:border-box;}
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
