--- a/games.html
+++ b/games.html
@@ -237,7 +237,7 @@
       .game-title {font-size: 1.5rem;}
       .seo-content h1 {font-size: 1.5rem;}
     }
-    /* زر التكبير */
+ /* زر التكبير */
 .zoom-btn {
   position: absolute;
   bottom: 15px;
@@ -251,30 +251,29 @@
   font-size: 16px;
   transition: all 0.3s ease;
   z-index: 20;
-  opacity: 0.6;
+  opacity: 0.8;
 }
 .zoom-btn:hover { opacity: 1; }
 
-/* عند تفعيل fullscreen نحرك الزر للأعلى ونخفيه افتراضيًا */
+/* عند وضع التكبير */
 .game-frame.fullscreen-css .zoom-btn.exit {
   top: 10px;
   right: 10px;
   bottom: auto;
-  background: rgba(0,0,0,0.7);
+  background: rgba(0,0,0,0.6);
   border-radius: 50%;
   font-size: 22px;
-  width: 45px;
-  height: 45px;
-  opacity: 0; /* مخفي افتراضيًا */
-  transition: opacity 0.4s ease;
+  width: 46px;
+  height: 46px;
+  opacity: 0.35; /* نصف شفاف دائمًا */
+  transition: opacity 0.3s ease;
 }
 
-/* عند تمرير الماوس أو لمس الشاشة يظهر الزر */
+/* عندما يلمس أو يحرك المستخدم الماوس */
 .game-frame.fullscreen-css.show-controls .zoom-btn.exit {
-  opacity: 1;
+  opacity: 0.9; /* تظهر بوضوح مؤقتًا */
 }
 
-/* تحسين على الوضع الأفقي للهاتف */
 @media (orientation: landscape) {
   .game-frame.fullscreen-css .zoom-btn.exit {
     top: 8px;
@@ -603,6 +602,46 @@ let hideTimeout;
 });
 
 </script>
+    <!-- كود زر التكبير -->
+  <script>
+  const gameFrame = document.querySelector('.game-frame');
+  const zoomBtn = document.createElement('button');
+  zoomBtn.className = 'zoom-btn';
+  zoomBtn.textContent = '⤢';
+  gameFrame.appendChild(zoomBtn);
+
+  // تفعيل أو إلغاء التكبير
+  zoomBtn.addEventListener('click', async () => {
+    if (!document.fullscreenElement) {
+      await gameFrame.requestFullscreen?.();
+      gameFrame.classList.add('fullscreen-css');
+      zoomBtn.classList.add('exit');
+      zoomBtn.textContent = '✕';
+    } else {
+      await document.exitFullscreen?.();
+      gameFrame.classList.remove('fullscreen-css');
+      zoomBtn.classList.remove('exit');
+      zoomBtn.textContent = '⤢';
+    }
+  });
+
+  // جعل الزر أكثر وضوحًا عند حركة اللاعب
+  let hideTimeout;
+  ['mousemove', 'touchstart'].forEach(evt => {
+    gameFrame.addEventListener(evt, () => {
+      if (gameFrame.classList.contains('fullscreen-css')) {
+        gameFrame.classList.add('show-controls');
+        clearTimeout(hideTimeout);
+        hideTimeout = setTimeout(() => {
+          gameFrame.classList.remove('show-controls');
+        }, 2000);
+      }
+    });
+  });
+  </script>
+</body>
+</html>
+
 
 </body>
 </html>
