--- a/games.html
+++ b/games.html
@@ -16,6 +16,65 @@
   <meta property="og:url" content="https://tikmob.github.io/game">
   
   <style>
+    /* زر التكبير */
+.zoom-btn {
+  position: absolute;
+  right: 12px;
+  bottom: 12px;
+  z-index: 9999;
+  background: rgba(0,0,0,0.6);
+  color: #fff;
+  border: none;
+  width:44px;
+  height:44px;
+  border-radius:8px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:18px;
+  cursor:pointer;
+  backdrop-filter: blur(4px);
+  transition: transform .15s ease, background .15s ease;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.45);
+}
+.zoom-btn:hover { transform: translateY(-3px); background: rgba(0,0,0,0.8); }
+
+/* الحالة الموسعة (CSS fallback) */
+.game-frame.fullscreen-css {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw !important;
+  height: 100vh !important;
+  max-width: 100% !important;
+  border-radius: 0 !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  z-index: 2147483647; /* أعلى z-index ممكن */
+  background: #000;
+}
+
+/* عندما نضع .fullscreen-css نخفي عناصر الصفحة التي قد تبقى ظاهرة */
+.game-frame.fullscreen-css ~ .game-info,
+.game-frame.fullscreen-css ~ .seo-content,
+.game-frame.fullscreen-css ~ header,
+.game-frame.fullscreen-css ~ footer {
+  display: none !important;
+}
+
+/* أثناء التكبير، ضع الـiframe ظاهراً */
+.game-frame.fullscreen-css #game-iframe {
+  display: block !important;
+  width: 100% !important;
+  height: 100% !important;
+}
+
+/* زر الخروج في الزوايا عند ملء الشاشة الحقيقية (لـbrowser fullscreen) */
+.zoom-btn.exit { background: rgba(255,0,0,0.85); }
+
+/* صغير: تأكد أن .game-frame تكون relative لكي يعمل زر absolute داخلها */
+.game-frame { position: relative; }
+
     * {margin:0;padding:0;box-sizing:border-box;}
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -178,6 +237,50 @@
       .game-title {font-size: 1.5rem;}
       .seo-content h1 {font-size: 1.5rem;}
     }
+ /* زر التكبير */
+.zoom-btn {
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+  background: rgba(0,0,0,0.6);
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: all 0.3s ease;
+  z-index: 20;
+  opacity: 0.8;
+}
+.zoom-btn:hover { opacity: 1; }
+
+/* عند وضع التكبير */
+.game-frame.fullscreen-css .zoom-btn.exit {
+  top: 10px;
+  right: 10px;
+  bottom: auto;
+  background: rgba(0,0,0,0.6);
+  border-radius: 50%;
+  font-size: 22px;
+  width: 46px;
+  height: 46px;
+  opacity: 0.35; /* نصف شفاف دائمًا */
+  transition: opacity 0.3s ease;
+}
+
+/* عندما يلمس أو يحرك المستخدم الماوس */
+.game-frame.fullscreen-css.show-controls .zoom-btn.exit {
+  opacity: 0.9; /* تظهر بوضوح مؤقتًا */
+}
+
+@media (orientation: landscape) {
+  .game-frame.fullscreen-css .zoom-btn.exit {
+    top: 8px;
+    right: 8px;
+  }
+}
+
   </style>
 </head>
 <body>
@@ -210,6 +313,9 @@
           scrolling="no"
           title="Free HTML5 Game - FreePlayHub">
         </iframe>
+        <!-- زر التكبير داخل إطار اللعبة (ضعه مباشرة بعد iframe) -->
+
+
       </div>
 
       <div class="game-info">
@@ -318,5 +424,185 @@
   })();
   </script>
   <script>window.scrollTo(0,0);</script>
+  <script>
+(function() {
+  const zoomBtn = document.getElementById('zoom-btn');
+  const gameFrame = document.querySelector('.game-frame');
+  const iframe = document.getElementById('game-iframe');
+  const header = document.querySelector('.game-header');
+
+  let isExpanded = false;
+  let usingBrowserFS = false; // true إذا دخلنا fullscreen حقيقي
+
+  // helper: enter "CSS fullscreen" fallback
+  function enterCssFullscreen() {
+    gameFrame.classList.add('fullscreen-css');
+    header?.style && (header.style.display = 'none');
+    // prevent body scroll
+    document.documentElement.style.overflow = 'hidden';
+    document.body.style.overflow = 'hidden';
+    isExpanded = true;
+    zoomBtn.classList.add('exit');
+    zoomBtn.textContent = '✕';
+  }
+
+  function exitCssFullscreen() {
+    gameFrame.classList.remove('fullscreen-css');
+    header?.style && (header.style.display = '');
+    document.documentElement.style.overflow = '';
+    document.body.style.overflow = '';
+    isExpanded = false;
+    zoomBtn.classList.remove('exit');
+    zoomBtn.textContent = '⤢';
+  }
+
+  // try to request browser fullscreen on the gameFrame element
+  async function enterBrowserFullscreen() {
+    const el = gameFrame;
+    if (!el) return false;
+    const request = el.requestFullscreen || el.webkitRequestFullscreen || el.msRequestFullscreen;
+    if (!request) return false;
+    try {
+      await request.call(el);
+      usingBrowserFS = true;
+      isExpanded = true;
+      zoomBtn.classList.add('exit');
+      zoomBtn.textContent = '✕';
+      // hide header just in case
+      header?.style && (header.style.display = 'none');
+      return true;
+    } catch (e) {
+      return false;
+    }
+  }
+
+  async function exitBrowserFullscreen() {
+    const exit = document.exitFullscreen || document.webkitExitFullscreen || document.msExitFullscreen;
+    if (!exit) return false;
+    try {
+      await exit.call(document);
+      usingBrowserFS = false;
+      isExpanded = false;
+      zoomBtn.classList.remove('exit');
+      zoomBtn.textContent = '⤢';
+      header?.style && (header.style.display = '');
+      return true;
+    } catch (e) {
+      return false;
+    }
+  }
+
+  // main toggle
+  async function toggleExpand() {
+    if (!isExpanded) {
+      // try browser fullscreen first
+      const ok = await enterBrowserFullscreen();
+      if (!ok) {
+        // fallback to CSS fullscreen
+        enterCssFullscreen();
+      }
+    } else {
+      // if we used browser fullscreen, exit it
+      if (usingBrowserFS) {
+        await exitBrowserFullscreen();
+      }
+      // ensure CSS fullscreen is removed
+      if (gameFrame.classList.contains('fullscreen-css')) exitCssFullscreen();
+    }
+  }
+
+  // handle fullscreenchange events (user pressed ESC etc.)
+  function onFullscreenChange() {
+    const fsElement = document.fullscreenElement || document.webkitFullscreenElement || document.msFullscreenElement;
+    if (!fsElement) {
+      // left browser fullscreen
+      usingBrowserFS = false;
+      // restore header if not in css fullscreen
+      if (!gameFrame.classList.contains('fullscreen-css')) {
+        header?.style && (header.style.display = '');
+        isExpanded = false;
+        zoomBtn.classList.remove('exit');
+        zoomBtn.textContent = '⤢';
+      }
+    } else {
+      // entered browser fullscreen
+      usingBrowserFS = true;
+      isExpanded = true;
+      header?.style && (header.style.display = 'none');
+      zoomBtn.classList.add('exit');
+      zoomBtn.textContent = '✕';
+    }
+  }
+
+  // attach events
+  zoomBtn.addEventListener('click', toggleExpand);
+  document.addEventListener('fullscreenchange', onFullscreenChange);
+  document.addEventListener('webkitfullscreenchange', onFullscreenChange);
+  document.addEventListener('msfullscreenchange', onFullscreenChange);
+
+  // exit with ESC key fallback for CSS fullscreen
+  document.addEventListener('keydown', (e) => {
+    if (e.key === 'Escape' && gameFrame.classList.contains('fullscreen-css')) {
+      exitCssFullscreen();
+    }
+  });
+
+  // If user rotates device while in CSS fullscreen, ensure height is updated
+  window.addEventListener('orientationchange', () => {
+    if (gameFrame.classList.contains('fullscreen-css')) {
+      // small delay to allow resize
+      setTimeout(() => {
+        // nothing special needed — CSS uses vw/vh — but we reflow iframe
+        iframe.style.width = '100%';
+        iframe.style.height = '100%';
+      }, 300);
+    }
+  });
+
+  // Accessibility: long-press on mobile could open context menu — prevent default touch-hold on button
+  zoomBtn.addEventListener('touchstart', (e) => e.stopPropagation());
+})();
+
+// إنشاء زر التكبير
+const zoomBtn = document.createElement('button');
+zoomBtn.className = 'zoom-btn';
+zoomBtn.textContent = '⤢';
+gameFrame.appendChild(zoomBtn);
+
+// تفعيل/إلغاء التكبير
+zoomBtn.addEventListener('click', async () => {
+  if (!document.fullscreenElement) {
+    await gameFrame.requestFullscreen?.();
+    gameFrame.classList.add('fullscreen-css');
+    zoomBtn.classList.add('exit');
+    zoomBtn.textContent = '✕';
+  } else {
+    await document.exitFullscreen?.();
+    gameFrame.classList.remove('fullscreen-css');
+    zoomBtn.classList.remove('exit');
+    zoomBtn.textContent = '⤢';
+  }
+});
+
+// جعل الزر يظهر فقط عند تحريك الماوس أو لمس الشاشة
+let hideTimeout;
+['mousemove', 'touchstart'].forEach(evt => {
+  gameFrame.addEventListener(evt, () => {
+    if (gameFrame.classList.contains('fullscreen-css')) {
+      gameFrame.classList.add('show-controls');
+      clearTimeout(hideTimeout);
+      hideTimeout = setTimeout(() => {
+        gameFrame.classList.remove('show-controls');
+      }, 2500); // يختفي بعد 2.5 ثانية من عدم الحركة
+    }
+  });
+});
+
+</script>
+  
+</body>
+</html>
+
+
 </body>
 </html>
