--- a/games1.html
+++ b/games1.html
@@ -1,4 +1,4 @@
-لا ادري ماذا حدث زر الازلة يظهر مرتين فوق بعض <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -639,9 +639,5 @@ let hideTimeout;
     });
   });
   </script>
-</body>
-</html>
-
-
 </body>
 </html>
