--- a/games5.html
+++ b/games5.html
@@ -16,6 +16,24 @@
   <meta property="og:url" content="https://tikmob.github.io/game">
   
   <style>
+    .zoom-btn {
+    position: absolute;
+    background: rgba(0,0,0,0.6);
+    color: #fff;
+    border: none;
+    width: 38px;
+    height: 38px;
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    cursor: pointer;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+    transition: background 0.2s ease;
+    z-index: 50;
+  }
+  .zoom-btn:hover { background: rgba(0,0,0,0.8); }
     /* زر التكبير */
 .zoom-btn {
   position: absolute;
@@ -313,6 +331,8 @@
           scrolling="no"
           title="Free HTML5 Game - FreePlayHub">
         </iframe>
+        <!-- زر التكبير داخل إطار اللعبة (ضعه مباشرة بعد iframe) -->
+<button id="zoom-btn" class="zoom-btn" aria-label="Toggle fullscreen">⤢</button>
 
 
       </div>
@@ -638,5 +658,25 @@ let hideTimeout;
     });
   });
   </script>
+  <script>
+  const btn = document.getElementById("zoom-btn");
+  
+  // 🔢 غيّر هذا الرقم لتحديد موقع الزر (من 1 إلى 9)
+  const position = 2;
+
+  const positions = {
+    1: { top: "10px", left: "10px", transform: "none" },
+    2: { top: "10px", left: "50%", transform: "translateX(-50%)" },
+    3: { top: "10px", right: "10px", transform: "none" },
+    4: { top: "50%", left: "10px", transform: "translateY(-50%)" },
+    5: { top: "50%", left: "50%", transform: "translate(-50%, -50%)" },
+    6: { top: "50%", right: "10px", transform: "translateY(-50%)" },
+    7: { bottom: "10px", left: "10px", transform: "none" },
+    8: { bottom: "10px", left: "50%", transform: "translateX(-50%)" },
+    9: { bottom: "10px", right: "10px", transform: "none" },
+  };
+
+  Object.assign(btn.style, positions[position]);
+</script>
 </body>
 </html>
