--- a/game6.html
+++ b/game6.html
@@ -283,6 +283,21 @@
       }
     }
   </style>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "FreePlayHub",
+  "url": "https://tikmob.github.io/game",
+  "description": "Play free online HTML5 browser games instantly without download or ads.",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://tikmob.github.io/game/search?q={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
+
 </head>
 <body>
   <header class="game-header">
