--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Play the best unblocked games on UG17 - Free online games like Subway Surfers, Geometry Dash, Cookie Clicker and more. Unblocked Games 17 offers the best gaming experience.">
     <meta name="keywords" content="github.io games, ug17, github games, yex games, ug17 games, github games, unblocked games 17, github io, github io games, free games, poki com poki com, game online, free games to play, free online games, rummy game, subway surfers, subway surfers game, subway surf subway surf, game subway run">
-    <meta name="author" content="UG17 Games">
-    <meta property="og:title" content="UG17 Games - Best Unblocked Games Online">
+    <meta name="author" content="FreePlayHub">
+    <meta property="og:title" content="FreePlayHub - Best Unblocked Games Online">
     <meta property="og:description" content="Play the best unblocked games for free. Subway Surfers, Geometry Dash, Cookie Clicker and many more exciting games.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ug17.github.io">
     <meta property="og:image" content="https://ug17.github.io/images/og-image.jpg">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="UG17 Games - Best Unblocked Games Online">
+    <meta name="twitter:title" content="FreePlayHub - Best Unblocked Games Online">
     <meta name="twitter:description" content="Play the best unblocked games for free. Subway Surfers, Geometry Dash, Cookie Clicker and many more.">
-    <title>UG17 Games - Best Unblocked Games Online | Free Games to Play</title>
+    <title>FreePlayHub - Best Unblocked Games Online | Free Games to Play</title>
     <link rel="canonical" href="https://ug17.github.io">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <style>
@@ -409,7 +409,7 @@
             <div class="header-content">
                 <a href="/" class="logo">
                     <span class="logo-icon">🎮</span>
-                    <span>UG17 Games</span>
+                    <span>FreePlayHub Games</span>
                 </a>
                 <button class="mobile-menu-btn" id="mobileMenuBtn">☰</button>
                 <nav class="nav-menu" id="navMenu">
@@ -588,7 +588,7 @@
 
         <!-- Features -->
         <section>
-            <h2 class="section-title">Why Choose UG17 Games?</h2>
+            <h2 class="section-title">Why Choose FreePlayHub Games?</h2>
             <div class="features">
                 <div class="feature-card">
                     <div class="feature-icon">🚀</div>
@@ -619,7 +619,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
-                    <h3>UG17 Games</h3>
+                    <h3>FreePlayHub Games</h3>
                     <p>Your ultimate destination for the best unblocked games online. Play for free without any restrictions.</p>
                 </div>
                 <div class="footer-column">
@@ -653,7 +653,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 UG17 Games. All rights reserved. | Unblocked Games 17 | Free Online Games</p>
+                <p>&copy; 2025 FreePlayHub Games. All rights reserved. | Unblocked Games 17 | Free Online Games</p>
             </div>
         </div>
     </footer>
@@ -717,7 +717,7 @@
         const structuredData = {
             "@context": "https://schema.org",
             "@type": "WebSite",
-            "name": "UG17 Games",
+            "name": "FreePlayHub Games",
             "url": "https://ug17.github.io",
             "description": "Play the best unblocked games online for free. Subway Surfers, Geometry Dash, Cookie Clicker and many more exciting games.",
             "potentialAction": {
