--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <h1>Best Unblocked Games 17 Online</h1>
+            <h1>Best Unblocked Games Online</h1>
             <p>Play the most popular unblocked games for free. Enjoy Subway Surfers, Geometry Dash, Cookie Clicker and many more exciting games on FreePlayHub Games - your ultimate gaming destination.</p>
             <div class="search-box">
                 <input type="text" placeholder="Search for games...">
